# weaveback

./: .containerignore  .gitignore  .mcp.json  CHATGPT-5.5-HANDOFF.md  Cargo.toml  Containerfile  LICENSE-0BSD  LICENSE-APACHE  README.adoc  README.md  cov_summary.txt  coverage_details.json  coverage_missing_lines.raw.txt  coverage_py.json  coverage_summary.txt  find_big_chunks.py  flake.nix  justfile  lcov_api.info  lcov_py.info  link_audit.txt  link_audit_fixed.txt  mise.toml  pyproject.toml  rust-toolchain.toml  weaveback.toml
crates/azadi/: Cargo.toml
crates/azadi/src/: apply_back.rs  lookup.rs  main.rs  mcp.rs
crates/azadi/tests/: test_apply_back.rs  test_cli.rs  test_mcp.rs  test_trace.rs
crates/wb-mcp/: Cargo.toml
crates/wb-mcp/src/: cli_generated.rs  main.adoc  main.rs
crates/wb-mcp/src-wvb/: main.wvb
crates/wb-mcp/tests/: smoke.rs
crates/wb-query/: Cargo.toml
crates/wb-query/src/: cli_generated.rs  main.adoc  main.rs  tests.rs
crates/wb-query/src-wvb/: main.wvb
crates/wb-query/tests/: smoke.rs
crates/wb-serve/: Cargo.toml
crates/wb-serve/src/: cli_generated.rs  main.adoc  main.rs
crates/wb-serve/src-wvb/: main.wvb
crates/wb-serve/tests/: smoke.rs
crates/wb-tangle/: Cargo.toml
crates/wb-tangle/src/: cli_generated.rs  main.adoc  main.rs  tests.rs
crates/wb-tangle/src-wvb/: main.wvb
crates/weaveback/: Cargo.toml
crates/weaveback-agent-core/: Cargo.toml
crates/weaveback-agent-core/src/: apply.adoc  apply.rs  change_plan.adoc  change_plan.rs  lib.adoc  lib.rs  read_api.adoc  read_api.rs  workspace.adoc  workspace.rs
crates/weaveback-agent-core/src-wvb/: apply.wvb  change_plan.wvb  lib.wvb  read_api.wvb  workspace.wvb
crates/weaveback-agent-core/src/apply/: tests.rs
crates/weaveback-agent-core/src/read_api/: context.rs  db.rs  search.rs  tests.rs  trace.rs
crates/weaveback-agent-core/src/workspace/: tests.rs
crates/weaveback-api/: Cargo.toml
crates/weaveback-api/src/: apply_back.adoc  apply_back.rs  coverage.adoc  coverage.rs  lib.adoc  lib.rs  lint.adoc  lint.rs  lookup.adoc  lookup.rs  lsp_runner.adoc  lsp_runner.rs  mcp.adoc  mcp.rs  process.adoc  process.rs  query.adoc  query.rs  semantic.adoc  semantic.rs  tag.adoc  tag.rs  tangle.adoc  tangle.rs
crates/weaveback-api/src-wvb/: apply_back.wvb  coverage.wvb  lib.wvb  lint.wvb  lookup.wvb  lsp_runner.wvb  mcp.wvb  process.wvb  query.wvb  semantic.wvb  tag.wvb  tangle.wvb
crates/weaveback-api/src-wvb/apply_back/: impl-api.wvb  impl-apply.wvb  impl-fuzzy.wvb  impl-heuristics.wvb  impl-oracle.wvb  impl-resolve.wvb  impl-run.wvb  tests-apply-file.wvb  tests-assembly.wvb  tests-batch.wvb  tests-primitives.wvb  tests-resolution.wvb  tests-runner.wvb  tests-workspace.wvb
crates/weaveback-api/src-wvb/coverage/: impl-cargo.wvb  impl-error.wvb  impl-lcov.wvb  impl-locations.wvb  impl-text.wvb  tests-assembly.wvb  tests-cargo-extra.wvb  tests-cargo.wvb  tests-helpers.wvb  tests-lcov-summary.wvb  tests-location-errors.wvb  tests-locations.wvb  tests-summary-output.wvb
crates/weaveback-api/src-wvb/mcp/: helpers.wvb  run.wvb  tests.wvb  tools.wvb
crates/weaveback-api/src-wvb/process/: arguments.wvb  expanded-paths.wvb  filesystem.wvb  macro-prelude.wvb  markdown-normalize.wvb  run.wvb  skip.wvb  tests.wvb
crates/weaveback-api/src-wvb/tangle/: tests-assembly.wvb
crates/weaveback-api/src/apply_back/: apply.rs  fuzzy.rs  heuristics.rs  model.rs  oracle.rs  resolve.rs  run.rs  tests.rs  types.rs
crates/weaveback-api/src/coverage/: cargo.rs  error.rs  lcov.rs  locations.rs  tests_coverage.rs  text.rs
crates/weaveback-api/src/lint/: config.rs  fs_scan.rs  rules.rs  run.rs  tests.rs
crates/weaveback-api/src/lookup/: tests.rs
crates/weaveback-api/src/lsp_runner/: tests.rs
crates/weaveback-docgen/: Cargo.toml  manifest.adoc
crates/weaveback-docgen/examples/: bisect_panic.rs  examples.adoc  minimize_panic.rs
crates/weaveback-docgen/src/: adoc_scan.adoc  adoc_scan.rs  d2.adoc  d2.rs  inject.adoc  inject.rs  literate_index.adoc  literate_index.rs  main.rs  plantuml.adoc  plantuml.rs  render.adoc  render.rs  tests.rs  weaveback_docgen.adoc  xref.adoc  xref.rs
crates/weaveback-docgen/src-wvb/: adoc_scan.wvb  d2.wvb  inject.wvb  literate_index.wvb  plantuml.wvb  render.wvb  weaveback_docgen.wvb  xref.wvb
crates/weaveback-lsp/: Cargo.toml  manifest.adoc
crates/weaveback-lsp/src/: lib.rs  tests.rs  weaveback_lsp.adoc
crates/weaveback-lsp/src-wvb/: weaveback_lsp.wvb
crates/weaveback-py/: Cargo.toml
crates/weaveback-py/src/: lib.adoc  lib.rs  tests.rs
crates/weaveback-py/src-wvb/: lib.wvb
crates/weaveback-serve/: Cargo.toml
crates/weaveback-serve/src/: lib.adoc  lib.rs  tests.rs  weaveback_serve.adoc
crates/weaveback-serve/src-wvb/: weaveback_serve.wvb
crates/weaveback-tangle/: Cargo.toml  manifest.adoc
crates/weaveback-tangle/src/: MAP.adoc  block_parser.adoc  block_parser.rs  cli.adoc  db.adoc  db.rs  lib.rs  lookup.adoc  lookup.rs  main.rs  noweb.adoc  noweb.rs  safe_writer.adoc  safe_writer.rs  safe_writer_test.rs  tangle.rs  test_common.rs  weaveback_tangle.adoc
crates/weaveback-tangle/src-wvb/: MAP.wvb  block_parser.wvb  cli.wvb  db.wvb  lookup.wvb  noweb.wvb  safe_writer.wvb  weaveback_tangle.wvb
crates/weaveback-tangle/tests/: main_tests.rs
crates/weaveback-tangle/tests-wvb/: tests.wvb
crates/weaveback/src/: apply_back.adoc  apply_back.rs  cli_generated.rs  lint.adoc  lint.rs  lookup.adoc  lookup.rs  main.rs  manifest.adoc  mcp.adoc  mcp.rs  semantic.adoc  semantic.rs  serve.adoc  serve.rs  tag.adoc  tag.rs  weaveback.adoc
crates/weaveback/tests/: test_apply_back.rs  test_cli.rs  test_mcp.rs  test_trace.rs  tests.adoc
examples/events/: .gitignore  config.adoc  events.adoc  justfile  meson.build
examples/events/db/: seed_events.sql
examples/events/include/: events.h
examples/events/src/: events.rs
examples/nim-adoc/: .gitignore  config.adoc  config.nim.adoc  gen_docs.py  meson.build
examples/nim-adoc/scripts/: gen_docs.adoc
examples/nim-adoc/theme/: docinfo.html
scripts/weaveback-graph/: pyproject.toml  weaveback_memory.lbdb
(+1038 files in other folders)
