# Cargo.toml

[workspace]
resolver = "2"

members = [
    "crates/weaveback",
    "crates/weaveback-macro",
    "crates/weaveback-tangle",
]

[workspace.package]
version = "0.3.6"
edition = "2024"
authors = ["Gianni Ferrarotti <gianni.ferrarotti@gmail.com>"]
license = "0BSD OR MIT OR Apache-2.0"
repository = "https://github.com/giannifer7/weaveback"

[profile.release]
strip        = true
lto          = true
codegen-units = 1
opt-level    = 3
debug        = 0

[profile.release-debug]
inherits      = "release"
strip         = false
lto           = false
codegen-units = 16

[workspace.dependencies]
# Shared dependencies, mandated for the entire workspace:
clap = { version = "4.4", features = ["derive"] }
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.9"
lazy_static = "1.4"
chrono = "0.4"

rusqlite = { version = "0.31", features = ["bundled"] }
similar = "2"

memchr = "2"
rhai = "1"
monty = { git = "https://github.com/pydantic/monty" }

# Other potential shared dependencies:
wasm-bindgen = "0.2.84"
tempfile = "3.8"

# Dev/test dependencies we might want across the workspace:
pretty_assertions = "1.4"
assert_cmd = "2.0"
predicates = "3.0"
escargot = "0.5"

# Internal crate dependencies (points to the sub-crate on disk)
weaveback-macro = { path = "crates/weaveback-macro" }
weaveback-tangle = { path = "crates/weaveback-tangle" }
