# Cargo.toml

[workspace]
resolver = "2"

members = [
    "crates/weaveback",
    "crates/weaveback-macro",
    "crates/weaveback-tangle",
    "crates/weaveback-docgen",
    "crates/weaveback-core",
    "crates/weaveback-lsp",
    "crates/weaveback-agent-core",
    "crates/weaveback-py",
]

[workspace.package]
version = "0.9.6"
edition = "2024"
authors = ["Gianni Ferrarotti <gianni.ferrarotti@gmail.com>"]
license = "0BSD OR MIT OR Apache-2.0"
repository = "https://github.com/giannifer7/weaveback"

[profile.release]
strip        = true
lto          = true
codegen-units = 1
opt-level    = 3
debug        = 0

[profile.release-debug]
inherits      = "release"
strip         = false
lto           = false
codegen-units = 16

[workspace.dependencies]
# Shared dependencies, mandated for the entire workspace:
clap = { version = "4.4", features = ["derive"] }
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
regex = "1.9"
lazy_static = "1.4"
chrono = "0.4"

rusqlite = { version = "0.31", features = ["bundled"] }
similar = "2"
tiny_http = "0.12"
notify = "6"
ureq = { version = "2", features = ["json"] }

memchr = "2"
rhai = "1"
monty = { git = "https://github.com/pydantic/monty" }

blake3 = "1"
rayon = "1"
pulldown-cmark = { version = "0.12", default-features = false }

# Other potential shared dependencies:
wasm-bindgen = "0.2.84"
tempfile = "3.8"

# Dev/test dependencies we might want across the workspace:
pretty_assertions = "1.4"
assert_cmd = "2.0"
predicates = "3.0"
escargot = "0.5"

syn = { version = "2", features = ["full"] }
walkdir = "2"
lsp-types = "0.95"
url = "2.4"
pyo3 = { version = "0.28", features = ["extension-module"] }
pythonize = "0.28"

# Internal crate dependencies (points to the sub-crate on disk)
weaveback-core = { path = "crates/weaveback-core" }
weaveback-macro = { path = "crates/weaveback-macro" }
weaveback-tangle = { path = "crates/weaveback-tangle" }
weaveback-lsp = { path = "crates/weaveback-lsp" }
weaveback-agent-core = { path = "crates/weaveback-agent-core" }
asciidoc-parser = { git = "https://github.com/giannifer7/asciidoc-parser", rev = "d0411b9" } # PR#498 pending merge
acdc-parser = { git = "https://github.com/nlopes/acdc", rev = "56000a96343809a4d7ae7d09c71680b101d1a978" }
acdc-converters-core = { git = "https://github.com/nlopes/acdc", rev = "56000a96343809a4d7ae7d09c71680b101d1a978" }
acdc-converters-html = { git = "https://github.com/nlopes/acdc", rev = "56000a96343809a4d7ae7d09c71680b101d1a978", features = ["highlighting"] }
