[build-system]
requires = ["maturin>=1.8,<2"]
build-backend = "maturin"

[project]
name = "weaveback-agent"
version = "0.1.0"
description = "Typed Python agent APIs for weaveback"
readme = "python/weaveback-agent/README.md"
requires-python = ">=3.14"
dependencies = [
  "pydantic>=2.11",
]

[dependency-groups]
dev = [
  "pyright>=1.1.400",
  "pytest>=8.3",
  "ruff>=0.11",
]

[tool.maturin]
module-name = "weaveback_agent._weaveback"
python-source = "python/weaveback-agent/src"
manifest-path = "crates/weaveback-py/Cargo.toml"

[tool.ruff]
line-length = 100

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
