[package]
name = "weaveback-docgen"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Documentation generator: xref analysis, asciidoctor orchestration, HTML post-processing"
license.workspace = true
repository = "https://github.com/giannifer7/weaveback"

[dependencies]
thiserror.workspace = true
syn.workspace = true
walkdir.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
weaveback-lsp.workspace = true
asciidoc-parser.workspace = true
blake3.workspace = true
rayon.workspace = true
tempfile.workspace = true
acdc-parser.workspace = true
acdc-converters-core.workspace = true
acdc-converters-html.workspace = true

[[bin]]
name = "weaveback-docgen"
path = "src/main.rs"
