[package]
name = "weaveback-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Bridge between language-specific LSPs and Weaveback literate sources"

[dependencies]
weaveback-core.workspace = true
lsp-types.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
log = "0.4"
url = "2.4"

[dev-dependencies]
tempfile.workspace = true
# Add if needed
