[package]
name = "weaveback-py"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "_weaveback"
crate-type = ["cdylib"]

[dependencies]
pyo3.workspace = true
pythonize.workspace = true
serde.workspace = true
serde_json.workspace = true
weaveback-agent-core.workspace = true
