[package]
name = "weaveback-tangle"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "A Rust implementation of noweb-style literate programming tool"
license.workspace = true
repository = "https://github.com/giannifer7/weaveback"

[dependencies]
regex.workspace = true
lazy_static.workspace = true
chrono.workspace = true
clap.workspace = true
log = "0.4"
env_logger = "0.10"
rusqlite.workspace = true
serde.workspace = true
similar.workspace = true
tempfile.workspace = true

[dev-dependencies]
predicates.workspace = true
assert_cmd.workspace = true

[[bin]]
name = "weaveback-tangle"
path = "src/main.rs"
