[package]
name        = "weaveback"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Literate programming toolchain (weaveback-macro + weaveback-tangle)"

[[bin]]
name = "weaveback"
path = "src/main.rs"

[dependencies]
weaveback-macro.workspace = true
weaveback-tangle.workspace = true
clap = { workspace = true }
serde_json.workspace = true
similar.workspace = true
regex.workspace = true
tiny_http.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
tempfile.workspace = true
predicates.workspace = true

# ── Packaging metadata ────────────────────────────────────────────────────────

[package.metadata.deb]
maintainer  = "Gianni Ferrarotti <gianni.ferrarotti@gmail.com>"
copyright   = "2024-2025, Gianni Ferrarotti"
section     = "devel"
priority    = "optional"
assets = [
    ["target/release/weaveback",        "usr/bin/", "755"],
    ["target/release/weaveback-macro", "usr/bin/", "755"],
    ["target/release/weaveback-tangle",  "usr/bin/", "755"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/weaveback",        dest = "/usr/bin/weaveback",        mode = "755" },
    { source = "target/release/weaveback-macro", dest = "/usr/bin/weaveback-macro", mode = "755" },
    { source = "target/release/weaveback-tangle",  dest = "/usr/bin/weaveback-tangle",  mode = "755" },
]

[package.metadata.aur]
depends = ["gcc-libs", "glibc"]
